--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
 
 	<groupId>com.farm2thali</groupId>
 	<artifactId>farm2thali</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>Farm2Thali</name>
 	<description>Farm2Thali Backend Application</description>
 	<packaging>war</packaging>
@@ -214,6 +213,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>farm2thali</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
