--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 
 	<groupId>com.farm2thali</groupId>
 	<artifactId>farm2thali</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>Farm2Thali</name>
 	<description>Farm2Thali Backend Application</description>
 	<packaging>war</packaging>
@@ -65,7 +66,6 @@
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -195,26 +195,9 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-logging</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.apache.logging.log4j</groupId>
-					<artifactId>log4j-to-slf4j</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
 	</dependencies>
 
 	<build>
-		<finalName>farm2thali</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
